# tuicr

./: .PLAN.md.swp  .gitignore  .tuicrignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  RELEASE.md
.claude/skill/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  error.rs  handler.rs  hash.rs  main.rs  profile.rs  text_edit.rs  tuicrignore.rs  update.rs
src/config/: mod.rs
src/input/: keybindings.rs
src/model/: comment.rs  diff_types.rs  mod.rs  review.rs
src/output/: markdown.rs  mod.rs
src/persistence/: mod.rs  storage.rs
src/syntax/: mod.rs
src/theme/: mod.rs
src/ui/: app_layout.rs  comment_panel.rs  help_popup.rs  status_bar.rs  styles.rs
src/vcs/: diff_parser.rs  file.rs  mod.rs  traits.rs
src/vcs/git/: cli.rs  context.rs  diff.rs  libgit2.rs  mod.rs  repository.rs  staging.rs
src/vcs/hg/: mod.rs
src/vcs/jj/: mod.rs
