[package]
name = "tuicr"
version = "0.5.0"
edition = "2024"
description = "Review AI-generated diffs like a GitHub pull request, right from your terminal."
license = "MIT"
repository = "https://github.com/agavra/tuicr"
homepage = "https://github.com/agavra/tuicr"
readme = "README.md"
keywords = ["tui", "git", "code-review", "diff", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# TUI framework
ratatui = "0.30"
crossterm = "0.29"

# Git operations
git2 = { version = "0.20", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
directories = "6.0"
unicode-width = "0.2"
uuid = { version = "1.0", features = ["v4"] }
arboard = { version = "3.4", features = ["wayland-data-control"] }
base64 = "0.22"

# Syntax highlighting
syntect = "5.2"
syntect-tui = "3.0"

[dev-dependencies]
tempfile = "3.24.0"
